<resources>
    <string name="app_name">CoffeeApp</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="login">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="account">У меня нет аккаунта</string>
    <string name="hint_password_confirm">Повторите пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="bad_email">Неверный формат email</string>
    <string name="bad_password">Пустое поле</string>
    <string name="password_not_equals">Пароли не совпадают</string>
    <string name="success">Success!</string>
    <string name="shops_near">Ближайшие кофейни</string>
    <string name="menu">Меню</string>
    <string name="your_order">Ваш заказ</string>
    <string name="coffee_desc">COFFEE</string>
    <string name="coffee_price">%.2f руб</string>
    <string name="add">Add</string>
    <string name="show_cart">Перейти к оплате</string>
    <string name="confirm_order">Оплатить</string>
    <string name="total">Итого</string>
    <plurals name="distance_var">
    <item quantity="one">%d м от вас</item>
    <item quantity="other">%d км от вас</item>
    </plurals>
    <string name="location">lo: %.4f la: %.4f</string>
    <string name="gps_enable">Включить GPS</string>
    <string name="ok">OK</string>
    <string name="location_disable">Разрешение на геолокацию не предоставлено</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="empty_order">КОРЗИНА ПУСТАЯ</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="map">Карта</string>
</resources>