<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:startIconDrawable="@drawable/ic_email"
            app:endIconMode="clear_text"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            android:hint="@string/hint_password"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/CustomButton"
            android:text="@string/sign_in"
            android:textColor="@color/cream"
            android:backgroundTint="@color/coffee_700"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/btn_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>
</FrameLayout>