<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.coffeeapp.presentation.login.LoginViewModel"/>
        <variable
            name="zaz"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="presentation.login.RegistrationFragment"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:errorEnabled="true"
            app:error="@{viewmodel.emailError.getContentIfNotHandled() ? @string/bad_email : null}"
            app:endIconMode="clear_text"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout_password"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:error="@{viewmodel.passwordError.getContentIfNotHandled() ? @string/bad_password : null}"
            android:hint="@string/hint_password"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_email"
            app:layout_constraintBottom_toTopOf="@+id/layout_password_confirm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password_confirm"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:error="@{viewmodel.cPasswordError.getContentIfNotHandled() ? @string/password_not_equals : null}"
            android:hint="@string/hint_password_confirm"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_password"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            style="@style/CustomButton"
            android:text="@string/sign_up"
            android:onClick="@{()->viewmodel.signUp(etEmail.getText().toString(), etPassword.getText().toString(), etPasswordConfirm.getText().toString())}"
            app:layout_constraintTop_toBottomOf="@+id/layout_password_confirm"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>