<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="total"
            type="Double" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:context=".presentation.login.LoginFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/total_price_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/empty_order"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/coffee_500"
            android:textStyle="bold"
            android:visibility="@{total > 0 ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{total > 0 ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/total_price_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="18sp"
            android:textColor="@color/coffee_500"
            app:layout_constraintBottom_toTopOf="@+id/confirm_order_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_recycler"
            android:layout_marginBottom="8dp"
            tools:text="2000 rub" />
        <TextView
            android:id="@+id/total_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/coffee_price(total)}"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/coffee_500"
            app:layout_constraintBottom_toTopOf="@+id/confirm_order_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_recycler"
            android:layout_marginBottom="8dp"
            tools:text="2000 rub" />

        <Button
            android:id="@+id/confirm_order_btn"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:visibility="@{total > 0 ? View.VISIBLE : View.INVISIBLE}"
            android:text="@string/confirm_order"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>